# Pokemon-Trader-Solana

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  README.md  README_CHALLENGE.md  abi.json  abi_SlabMachine.json  hardhat.config.cjs  index.html  package-lock.json  package.json  vite.config.ts
.openzeppelin/: unknown-33139.json
backend/: .env.example  .gitignore  README.md  package.json
contracts/: PokeballGame.sol  PokeballGameV2.sol  PokeballGameV3.sol  PokeballGameV4.sol  PokeballGameV5.sol  PokeballGameV6.sol  PokeballGameV7.sol  PokeballGameV8.sol  PokeballGameV9.sol  SlabNFTManager.sol  SlabNFTManagerV2.sol  SlabNFTManagerV2_1.sol  SlabNFTManagerV2_2.sol  SlabNFTManagerV2_3.sol  SlabNFTManagerV2_4.sol  addresses.json  wallets.json
docs/: DGEN1_TRANSACTION_ISSUE.md  EXECUTIVE_SUMMARY.md  MIGRATION_STATUS.md  PRD.md  QA_DEVNET.md  README_ALL_DOCS.md  README_DOCUMENTATION.md  README_POKEMON_TRADER.md  SETUP_POKEBALL_GAME.md  SOLANA_ARCHITECTURE.md  UPGRADE_V1.2.0_20_POKEMON.md  UUPS_UPGRADE_GUIDE.md  WALLET_CONFIG.md  WALLET_INTEGRATION.md  WEB3_FRONTEND.md  claude_agent_prompts.md  claude_agents.md  degen1_android_sdk.md  wallet_verification_complete.md
programs/pokeball_game/: Cargo.toml
programs/pokeball_game/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/pokeball_game/src/instructions/: admin.rs  consume_randomness.rs  deposit_nft.rs  despawn_pokemon.rs  force_spawn_pokemon.rs  initialize.rs  mod.rs  purchase_balls.rs  reposition_pokemon.rs  spawn_pokemon.rs  throw_ball.rs  withdraw_nft.rs  withdraw_revenue.rs
src/: App.tsx  (+2 more)
(+274 files in other folders)
