[package]
name = "pokeball-game"
version = "0.1.0"
description = "Pokemon Trader Solana - On-chain game program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pokeball_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
orao-solana-vrf = { version = "0.7.0", default-features = false, features = ["cpi"] }
